@@ -4,7 +4,7 @@
 #
 # This program is free software with ABSOLUTELY NO WARRANTY.
 # You can re-distribute and/or modify this program under
-# the same terms of the Ruby's lisence.
+# the same terms of the Ruby's license.
 #
 #
 # $Id$
@@ -14,7 +14,7 @@
 
 == Abstract
 
-An example using DRb. You can access to nadoka via DRb protocl.
+An example using DRb. You can access to nadoka via DRb protocol.
 See sample drbcl.rb
 
 
