@@ -1,6 +1,11 @@
 # ChangeLog of Nadoka($Rev$)
 # $Id$ 
 
+2007-02-20(Tue) 23:35:41 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>
+
+	* **/*.rb, plugins/*.nb : fix typos
+
+
 2006-10-28(Sat) 22:08:11 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>
 
 	* ndk/server_state.rb : fix bug on_mode after server split
